Fix windows version and workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,17 +6,19 @@ on:
       - '*'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: windows-latest
-
     strategy:
       matrix:
         architecture: [x64]
 
     env:
-      SOLUTION_FILE: Restarter.sln
-      DOTNET_VERSION: '10.0.x' 
+      PROJECT_FILE_PATH: Restarter.csproj
+      DOTNET_VERSION: '10.0.x'
 
     steps:
       - name: Checkout repository
@@ -28,13 +30,13 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Restore dependencies
-        run: dotnet restore ${{ env.SOLUTION_FILE }}
+        run: dotnet restore ${{ env.PROJECT_FILE_PATH }} -r win-${{ matrix.architecture }}
 
       - name: Build
-        run: dotnet build ${{ env.SOLUTION_FILE }} --configuration Release --no-restore
+        run: dotnet build ${{ env.PROJECT_FILE_PATH }} --configuration Release --no-restore -r win-${{ matrix.architecture }}
 
       - name: Publish
-        run: dotnet publish ${{ env.SOLUTION_FILE }} --configuration Release --runtime win-${{ matrix.architecture }} --output ./publish_temp/Restarter --no-build
+        run: dotnet publish ${{ env.PROJECT_FILE_PATH }} --configuration Release --runtime win-${{ matrix.architecture }} --output ./publish_temp/Restarter --no-build
 
       - name: Create zip archive
         run: |
@@ -49,9 +51,7 @@ jobs:
   create_release:
     needs: build
     runs-on: ubuntu-latest
-    permissions:
-      contents:
-
+    
     steps:
       - name: Download x64 artifact
         uses: actions/download-artifact@v4
