Feature: Release v2.0 - Major overhaul with robust process management
- Implement Job Objects: Child processes are now automatically terminated when the Restarter exits.
- Add Sleep/Resume detection: Automatically restarts the target app with a 5-second delay after wake-up (to wait for USB device recognition).
- Implement IconWatchdog: Re-registers the tray icon if Explorer crashes or restarts.
- Add support for passing arguments to the target executable (4th argument).
- Add version number display to the context menu.
- Fix tray icon registration timing issues on startup.

--- a/Restarter.csproj
+++ b/Restarter.csproj
@@ -6,6 +6,13 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+	<Title>Restarter</Title>
+	<AssemblyTitle>Restarter</AssemblyTitle>
+	<AssemblyCopyright>© Hiyowa Records 2017-2026</AssemblyCopyright>
+	<Company>Hiyowa Records</Company>
+	<Product>Restarter</Product>
+	<Version>2.0.0</Version>
+	<Authors>Hiyowa Kyobashi</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
